# CIP-1694-gov-tool

./: .gitignore  README.md  cabal.project  flake.nix
assets/: ccScript.plutus  ccScriptV2.plutus  lockingScript.plutus
assets/V1/: alwaysTrueMint.plutus
assets/V2/: alwaysTrueMint.plutus  ccScript.plutus  lockingScript.plutus
assets/V3/: ccScript.plutus  coldAlwaysTrueMint.plutus  coldCredentialScript.plutus  coldLockScript.plutus  datum.json  datum2.json  delegationLockingScript.plutus  hotAlwaysTrueMint.plutus  hotCredentialScript.plutus  hotLockScript.plutus  lockingScript.plutus  redeemer2.json
assets/datums/: initHotLockScriptDatum.json  resignChild4Datum.json  resignMemberChild7NewDatum.json
assets/redeemers/: reesignChild4Redeemer.json  resignMemberChild7Redeemer.json
dApp/: package-lock.json
local-testnet/: README.md
local-testnet/scripts/: mkX509Cert.sh  verify.py
local-testnet/verify-cert/: setup.py  verify-cert
openssl-web-app/: package-lock.json  package.json
plutus-gov-tool/: plutus-gov-tool.cabal
plutus-gov-tool/exe/: ColdScripts.hs  HotScripts.hs  Main.hs  Script.hs  Scripts.hs  ScriptsV1.hs  ScriptsV2.hs  ScriptsV3.hs  Shared.hs
x509-cert-example/: e2e.md  openSSL.md
x509-cert-example/CA/: ca-cert.hash  ca-cert.pem  ca-priv.pem  ca-pub.pem  ca.keyhash  ca.skey  ca.vkey
x509-cert-example/orchestrator/: cc-hot-auth.cert  coldLockScript.addr  hotLockScript.addr  orchestrator.addr  orchestrator.skey  orchestrator.vkey  tx.raw  tx.signed  txPartialChild4.witness  (+3 more)
x509-web-app/: package-lock.json  package.json
(+187 files in other folders)
