cabal-version: 3.0
name: plutus-gov-tool
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "A MVP implementation of a CIP 1694 governance tool for managing an organisation in the CC."
build-type: Simple

executable write-scripts
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:  Script
  hs-source-dirs: exe
  build-depends:
    , base >=4.2 && < 5
    , plutus-tx 
    , plutus-core
    , plutus-ledger-api
    , plutus-tx-plugin
    , cardano-api
    , serialise
    , bytestring